--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    tools:openDrawer="start"
+    tools:ignore="ExtraText"
+    android:background="@drawable/background"
+    tools:context=".MainActivity"
+    >
+
 
     <include
         android:id="@+id/app_bar_main"
         layout="@layout/app_bar_main"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent" />
 
     <com.google.android.material.navigation.NavigationView
